# statemachines_labs

./: README.md
lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab1/src/lib/: ConversionType.h  ConverterCommand.h  ConvertingStrategy.h  CsvReader.h  MealyStateMachine.h  MealyStateMachineBuilder.h  MealyToMoorConvertingStrategy.h  StateMachineConverter.h
lab1/src/lib/command/: ConverterCommand.h
lab1/src/lib/converter/: ConvertingStrategy.h  MealyToMoorConverter.h  MealyToMoorConvertingStrategy.h  MoorToMealyConverter.h  MoorToMealyConvertingStrategy.h
lab1/src/lib/csv/: CsvReader.h  CsvWriter.h
lab1/src/lib/statemachine/: MealyStateMachine.h  MoorStateMachine.h  MoorStateMachineBuilder.h
lab1/test/resources/: mealy-to-moore.out.txt  moore-to-mealy.out.txt
lab2/: CMakeLists.txt
lab2/src/: main.cpp
lab2/src/lib/args/: Args.h
lab2/src/lib/csv/: CSVReader.h
lab2/src/lib/statemachine/: Minimization.cpp  Minimization.h  StateMachineType.h
lab2/src/lib/utils/: vector.h
lab2/test/func/mealy_example_1/: input.txt
lab2/test/func/moore_example_1/: input.txt
lab3-task1/: CMakeLists.txt
lab3-task1/src/: main.cpp
lab3-task1/src/lib/args/: Args.h
lab3-task1/src/lib/csv/: CSVWriter.h  Types.h
lab3-task1/src/lib/grammar/: Grammar.cpp  Grammar.h  GrammarType.h
lab3-task1/src/lib/graph/: CGraph.h  Graph.cpp  Graph.h
lab3-task1/test/func/left_example_1/: input.txt
lab3-task1/test/func/right_example_1/: input.txt
lab3-task1/test/unit/grammar/: GrammarTest.cpp
lab3-task1/test/unit/graph/: CGraphTest.cpp
